Textarea height style

--- a/index.html
+++ b/index.html
@@ -325,7 +325,12 @@
                             </div>
                             <!-- Message input-->
                             <div class="form-floating mb-3">
-                                <textarea class="form-control" name="message" Title="message" type="text" style="height: 10rem" ></textarea>
+                                <textarea class="form-control textarea-height" name="message" Title="message" type="text" style="height: 10rem" ></textarea>
+                                <style>
+                                    .textarea-height {
+                                        height: 10rem;
+                                    }
+                                </style>
                                 <label for="message">Message</label>
                             </div>
                             <!-- Submit Button-->
