--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <meta name="description" content="A modern web application to manage and administer your U3A Group" />
+        <meta name="keywords" content="U3A,University of the Third Age,membership,enrolment,attendance,course,class">
+        <meta name="author" content="Michael Hanlon" />
+        <title>U3Admin - Administrative software for your U3A</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="favicon/favicon.ico" />
         <!-- Bootstrap Icons-->
