--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </head>
     <body id="page-top">
 
-
+        <!-- Success modal -->
         <div class="modal" id="modal" name="modal" tabindex="-1">
             <div class="modal-dialog">
               <div class="modal-content">
@@ -43,6 +43,7 @@
             </div>
           </div>
           
+          <!-- Error modal -->
           <div class="modal" id="errModal" name="errModal" tabindex="-1">
             <div class="modal-dialog">
               <div class="modal-content">
