resize image on small device

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Administrative Website</h3>
                             <p class="text-muted mb-0">Need to add a new course, change a class time, review statistics or run a report?</p>
-                                <p class="text-muted mb-0">Our administrative website provides secure, role-based access to all these functions and more.</p>
+                                <p class="text-muted mb-0">With contextual help a click away, our administrative website provides secure, role-based access to all these functions and more.</p>
                             </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -221,7 +221,7 @@
 
             <div class="container-fluid p-0 bg-secondary">
                 <div class="row g-0">
-                    <div class="col-lg-2 col-sm-6">
+                    <div class="col-lg-2 col-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/iphone.png" title="Member Portal Menu">
                             <img class="img-fluid" src="assets/img/portfolio/fullsize/iphone.png" alt="..." />
                             <div class="portfolio-box-caption">
@@ -230,7 +230,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-2 col-sm-6">
+                    <div class="col-lg-2 col-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/member-details.png" title="Member Details">
                             <img class="img-fluid" src="assets/img/portfolio/fullsize/member-details.png" alt="..." />
                             <div class="portfolio-box-caption">
@@ -239,7 +239,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-2 col-sm-6">
+                    <div class="col-lg-2 col-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/fees.png" title="Fee Payment">
                             <img class="img-fluid" src="assets/img/portfolio/fullsize/fees.png" alt="..." />
                             <div class="portfolio-box-caption">
@@ -248,7 +248,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-2 col-sm-6">
+                    <div class="col-lg-2 col-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/view.png" title="View Enrolments">
                             <img class="img-fluid" src="assets/img/portfolio/fullsize/view.png" alt="..." />
                             <div class="portfolio-box-caption">
@@ -257,7 +257,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-2 col-sm-6">
+                    <div class="col-lg-2 col-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/Choose.png" title="Add Enrolment">
                             <img class="img-fluid" src="assets/img/portfolio/fullsize/Choose.png" alt="..." />
                             <div class="portfolio-box-caption">
@@ -266,7 +266,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-2 col-sm-6">
+                    <div class="col-lg-2 col-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/whatson.png" title="What's on today">
                             <img class="img-fluid" src="assets/img/portfolio/fullsize/whatson.png" alt="..." />
                             <div class="portfolio-box-caption">
@@ -288,8 +288,8 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-info mt-0">Our valued clients</h2>
-                        <p class="text-info mt-4">A small but growing, happy user base. Click a U3A to view.</p>
+                        <h2 class="user-title mt-0">Our valued clients</h2>
+                        <p class="text-white-75 mt-4">A small but growing, happy user base.<br/>Click a U3A to view.</p>
                         <hr class="divider divider-light" />
                         <p class="mt-4"><a class="btn btn-lg btn-primary" href="https://eastlakes.u3anet.org.au/" >Eastlakes U3A Inc</a></p>
                         <p class="mt-4"><a class="btn btn-lg btn-primary" href="https://lakemacquarie.u3anet.org.au/" >Lake Macquarie U3A Inc</a></p>
@@ -298,6 +298,11 @@
                 </div>
             </div>
         </section>
+        <style>
+            .user-title {
+                color: var(--bs-gray-700)
+            }
+        </style>
         
         <!-- Contact-->
         <section class="page-section" id="contact">
@@ -330,7 +335,7 @@
                             <!-- Message input-->
                             <div class="form-floating mb-3">
                                 <textarea class="form-control textarea-height" name="message" Title="message" type="text" style="height: 10rem" ></textarea>
-                                <label for="message">Message</label>
+                                <label for="message">Additional Details (optional)</label>
                             </div>
                             <!-- Submit Button-->
                             <div class="d-grid"><button class="btn btn-primary btn-xl" id="submitButton" type="submit">Submit</button></div>
