success modal text

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
                 </div>
                 <div class="modal-body text-muted">
                     <p>Thank you for getting in contact with us.</p>
-                    <p>You will shortly receive an email from us to which you should reply. This ensures your email address is correct.</p>
-                    <p>On receipt of the reply we will get in touch.</p>
-                    <p>If you have issues, please make contact via one of our current U3A clients.</p>
+                    <p>You will will hear from us in the near future but please be patient as we are volunteers.</p>
+                    <p>Alternatively, you can make contact via one of our current U3A clients.</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-primary"  data-bs-dismiss="modal">Close</button>
@@ -326,6 +325,11 @@
                             <div class="form-floating mb-3">
                                 <input class="form-control" name="email" Title="Email" type="email" required />
                                 <label for="email">Email address</label>
+                            </div>
+                            <!-- Phone number-->
+                            <div class="form-floating mb-3">
+                                <input class="form-control" name="phone" Title="Phone" type="phone" required />
+                                <label for="email">Phone (optional)</label>
                             </div>
                             <!-- U3A Name-->
                             <div class="form-floating mb-3">
