--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
                             <!-- Submit Button-->
                             <!-- <div class="d-grid"><button class="btn btn-primary btn-xl" id="submitButton" type="submit">Submit</button></div> -->
                             <div class="d-grid">
-                                <button class="g-recaptcha btn btn-primary btn-xl"  type="button"
-                                    data-sitekey="6LfkytknAAAAAAYsNdr5hNmCJYHZuU37gQSzLDty" 
+                                <button class="g-recaptcha btn btn-primary btn-xl"  type="submit"
+                                    data-sitekey="6LfE59knAAAAAGHBhYACdH8g4rlGLOVHNJzd8avL" 
                                     data-callback='onSubmit' 
                                     data-action='submit'>Submit</button>
                             </div>
