--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="A modern web application to manage and administer your U3A Group" />
         <meta name="keywords" content="U3A,University of the Third Age,membership,enrolment,attendance,course,class">
         <meta name="author" content="Michael Hanlon" />
-        <title>U3Admin - Administrative software for your U3A</title>
+        <title>U3A Administrative</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="favicon/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -146,7 +146,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-phone fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Member Portal</h3>
+                            <h3 class="h4 mb-2">Member portal</h3>
                             <p class="text-muted mb-0">Members have access to their U3A membership &amp; enrolment details anywhere, anytime, on any device.</p>
                             <p class="text-muted mb-0">Robust security ensures access is granted to their details and only their details.</p>
                         </div>
@@ -154,7 +154,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Administrative Website</h3>
+                            <h3 class="h4 mb-2">Administrative website</h3>
                             <p class="text-muted mb-0">Need to add a new course, change a class time, review statistics or run a report?</p>
                                 <p class="text-muted mb-0">With contextual help a click away, our administrative website provides secure, role-based access to all these functions and more.</p>
                             </div>
@@ -171,12 +171,12 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Made with Love</h3>
+                            <h3 class="h4 mb-2">Made with love</h3>
                             <p class="text-muted mb-0">U3Admin is open source.</p>
                             <p class="text-muted mb-0">That's computer-speak meaning <emphasis>not for profit</emphasis>.</p>
                             <p class="text-muted mb-0">It is free to download and customise at any time.</p>
                             <p class="text-muted mb-0">We don't sell software. It is free for all.</p>
-                            <p class="mt-4"><a class="nav-link" href="https://github.com/HmichaelG/U3A">Our Github repository</a></p>
+                            <p class="mt-4"><a class="nav-link bi-github text-muted" href="https://github.com/HmichaelG/U3A">&nbsp; Our Github repository</a></p>
                         </div>
                     </div>
                 </div>
