Minor text changes

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Administrative website</h3>
+                            <h3 class="h4 mb-2">Administration website</h3>
                             <p class="text-muted mb-0">Need to add a new course, change a class time, review statistics or run a report?</p>
-                                <p class="text-muted mb-0">With contextual help a click away, our administrative website provides secure, role-based access to all these functions and more.</p>
+                                <p class="text-muted mb-0">With contextual help a click away, our administration website provides secure, role-based access to all these functions and more.</p>
                             </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -186,7 +186,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-envelope fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Reliable Email</h3>
+                            <h3 class="h4 mb-2">Reliable email</h3>
                             <p class="text-muted mb-0">Say goodbye to bounced email.</p>
                             <p class="text-muted mb-0">Our email service provider provides a world-renowned delivery service second to none.</p>
                         </div>
@@ -211,7 +211,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-people fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Large or Small</h3>
+                            <h3 class="h4 mb-2">Large or small</h3>
                             <p class="text-muted mb-0">No matter your U3A is large or small. Our U3Admin software is a great fit for you.</p>
                         </div>
                     </div>
