--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="keywords" content="U3A,University of the Third Age,membership,enrolment,attendance,course,class">
         <meta name="author" content="Michael Hanlon" />
         <title>U3A Administrative</title>
+        <!-- Bing webmaster tools -->
+        <meta name="msvalidate.01" content="FE17E157DA5D4FAFF8CD665B09B69AE3" />
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="favicon/favicon.ico" />
         <!-- Bootstrap Icons-->
