--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 });
             });
         </script>
+
+        <!-- Clarity tracking code for https://u3admin.org.au/ -->
+        <script>    (function(c,l,a,r,i,t,y){        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);    })(window, document, "clarity", "script", "im2p6pci3g");</script>
     
     </head>
 
