--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="A modern web application to manage and administer your U3A Group" />
         <meta name="keywords" content="U3A,University of the Third Age,membership,enrolment,attendance,course,class">
         <meta name="author" content="Michael Hanlon" />
-        <title>U3A Administrative</title>
+        <title>U3A Administration</title>
         <!-- Bing webmaster tools -->
         <meta name="msvalidate.01" content="FE17E157DA5D4FAFF8CD665B09B69AE3" />
         <!-- Favicon-->
