--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                             </div>
                             <!-- Message input-->
                             <div class="form-floating mb-3">
-                                <textarea class="form-control textarea-height" name="message" Title="message" type="text" style="height: 10rem" ></textarea>
+                                <textarea id="message" class="form-control textarea-height" name="message" Title="message" type="text" style="height: 10rem" ></textarea>
                                 <label for="message">Additional Details (optional)</label>
                             </div>
                             <input type="hidden" id="token" name="token">
