--- a/index.html
+++ b/index.html
@@ -25,16 +25,6 @@
         <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
         <script src="https://www.google.com/recaptcha/api.js?render=6LfkytknAAAAAAYsNdr5hNmCJYHZuU37gQSzLDty"></script>
         <script>
-            grecaptcha.ready(function() {
-                setCaptchaToken();
-                setInterval(function () { setCaptchaToken(); }, 2 * 60 * 1000);
-            });
-
-            function setCaptchaToken() {
-                grecaptcha.execute("6LfkytknAAAAAAYsNdr5hNmCJYHZuU37gQSzLDty", {action: "homepage"}).then(function(token) {
-                   document.getElementById("token").value = token;
-                });
-            }
         </script>
 
 <!-- MS Clarity tracking -->
@@ -48,7 +38,7 @@
 
     </head>
 
-    <body id="page-top">
+    <body id="page-top" tabindex="-1">
 
         <!-- Success modal -->
         <div class="modal" id="modal" name="modal" tabindex="-1">
@@ -132,7 +122,7 @@
         </header>
 
         <!-- About-->
-        <section class="page-section bg-primary" id="about">
+        <section class="page-section bg-primary" id="about" tabindex="-1">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
@@ -373,7 +363,7 @@
                             <input type="hidden" id="token" name="token">
                             <!-- Submit Button-->
                             <div class="d-grid">
-                                <button class="btn btn-primary btn-xl" 
+                                <button id="submitButton" class="btn btn-primary btn-xl" 
                                     data-sitekey="6LfkytknAAAAAAYsNdr5hNmCJYHZuU37gQSzLDty" 
                                     data-callback='onSubmit' 
                                     data-action='submit'>Submit
