success message change

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                 </div>
                 <div class="modal-body text-muted">
                     <p>Thank you for getting in contact with us.</p>
-                    <p>You will will hear from us in the near future but please be patient as we are volunteers.</p>
+                    <p>You will receive an automated email from very shortly to confirm your request.
+                        Don't forget to check your email junk folder.
+                    </p>
+                    <p>You will then hear from us in the near future but please be patient as we are volunteers.</p>
                     <p>Alternatively, you can make contact via one of our current U3A clients.</p>
                 </div>
                 <div class="modal-footer">
@@ -377,7 +380,7 @@
                         </div>
                         <!-- Phone number-->
                         <div class="form-floating mb-3">
-                            <input class="form-control" name="phone" Title="Phone" type="phone" required />
+                            <input class="form-control" name="phone" Title="Phone" type="phone" />
                             <label for="email">Phone (optional)</label>
                         </div>
                         <!-- U3A Name-->
