--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="modal-body text-muted">
                     <p>Thank you for getting in contact with us.</p>
-                    <p>You will receive an automated email from very shortly to confirm your request.
+                    <p>You will receive an automated system email very shortly to confirm your request.
                         Don't forget to check your email junk folder.
                     </p>
                     <p>You will then hear from us in the near future but please be patient as we are volunteers.</p>
