Added membership page

--- a/u3a-membership-software.html
+++ b/u3a-membership-software.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
   <head>
-    <!-- refer https://developers.google.com/search/docs/crawling-indexing/consolidate-duplicate-urls#rel-canonical-link-method -->
     <link rel="canonical" href="https://u3admin.org.au" />
+
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <title>U3A Membership software</title>
 
-    <meta http-equiv="refresh" content="url='0; https://u3admin.org.au'" />
   </head>
+
   <body>
-    <p>redirecting, please wait...</p>
+    <script>
+        let url = "https://u3admin.org.au";
+        window.location.href = url;
+      </script>
   </body>
-</html>
+
+  </html>
