--- a/u3a-administration-software.html
+++ b/u3a-administration-software.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>U3A Membership software</title>
+    <title>U3A Administration software</title>
 
 </head>
 
