--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
     <link rel="preconnect" href="https://www.google.com">
     <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
     <script src="https://www.google.com/recaptcha/api.js?render=6LfkytknAAAAAAYsNdr5hNmCJYHZuU37gQSzLDty"></script>
-    <script>
-    </script>
 
     <!-- MS Clarity tracking -->
     <script type="text/javascript">
@@ -124,7 +122,7 @@
     </nav>
 
     <!-- Masthead-->
-    <header class="masthead">
+    <header class="masthead" id="masthead">
         <div class="container px-4 px-lg-5 h-100">
             <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-8 align-self-end">
