--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Images</a></li>
                     <li class="nav-item"><a class="nav-link" href="#users">Clients</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item" hidden><a class="nav-link"
+                            href="https://u3admin.org.au/u3a-administration-software.html">Contact1</a></li>
+                    <li class="nav-item" hidden><a class="nav-link"
+                            href="https://u3admin.org.au/u3a-member-portal.html">Contact2</a></li>
+                    <li class="nav-item" hidden><a class="nav-link"
+                            href="https://u3admin.org.au/u3a-membership-software.html">Contact3</a></li>
+                    <li class="nav-item" hidden><a class="nav-link"
+                            href="https://u3admin.org.au/u3a-software.html">Contact4</a></li>
                 </ul>
             </div>
         </div>
