--- a/index.html
+++ b/index.html
@@ -423,19 +423,11 @@
             </div>
         </div>
     </section>
-    <!-- Footer-->
-    <footer class="bg-light py-5">
-        <div class="container px-4 px-lg-5">
-            <div class="small text-center text-muted">Copyright &copy;<span id="year"></span> - U3Admin.org.au</div>
-        </div>
+    
+    <!-- Footer: On IIS this require Server Side Includes to be installed and mapped to *.html files -->
 
-        <script>
-            const d = new Date();
-            let year = d.getFullYear();
-            document.getElementById("year").innerHTML = year;
-        </script>
+    <!--#include virtual="/footer.html" -->
 
-    </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- SimpleLightbox plugin JS-->
